[project]
name = "AutoSplit"
version = "2.3.4" # (remember to bump in uv.lock too)
requires-python = ">=3.14"
dependencies = [
  "Levenshtein >=0.27.3", # free-threaded # TODO: Bump when 3.15 wheels
  "PyAutoGUI >=0.9.52",
  "PyWinCtl >=0.0.42", # py.typed
  "keyboard @ git+https://github.com/boppreh/keyboard.git", # Fix install on macos and linux-ci https://github.com/boppreh/keyboard/pull/568
  "numpy >=2.3.2", # Python 3.14 support # TODO: Bump when 3.15 wheels
  "opencv-contrib-python-headless >=4.10", # NumPy 2 support # TODO: Bump when 3.15 wheels
  "packaging >=20.0", # py.typed
  "tomli-w >=1.1.0", # Typing fixes

  # When needed, PySide6 dev builds can be found at https://download.qt.io/snapshots/ci/pyside/dev?C=M;O=D
  "PySide6-Essentials >=6.9.0", # Windows ARM64 support

  #
  # Build and compile resources
  "pyinstaller >=6.15.0", # Python 3.14 support # TODO: Bump when 3.15 wheels

  #
  # https://packaging.python.org/en/latest/specifications/dependency-specifiers/#environment-markers
  #
  # Windows-only dependencies:
  "pygrabber >=0.2; sys_platform == 'win32'", # Completed types
  "pywin32 >=312; sys_platform == 'win32'", # Python 3.15 support
  "typed-D3DShot[numpy] >=1.1.1; sys_platform == 'win32'",
  # winrt: 3.14 wheels # TODO: Bump when 3.15 wheels
  "winrt-Windows.Foundation >=3.2.1; sys_platform == 'win32'",
  "winrt-Windows.Graphics >=3.2.1; sys_platform == 'win32'",
  "winrt-Windows.Graphics.Capture >=3.2.1; sys_platform == 'win32'",
  "winrt-Windows.Graphics.Capture.Interop >=3.2.1; sys_platform == 'win32'",
  "winrt-Windows.Graphics.DirectX >=3.2.1; sys_platform == 'win32'",
  "winrt-Windows.Graphics.DirectX.Direct3D11 >=3.2.1; sys_platform == 'win32'",
  "winrt-Windows.Graphics.DirectX.Direct3D11.Interop >=3.2.1; sys_platform == 'win32'",
  "winrt-Windows.Graphics.Imaging >=3.2.1; sys_platform == 'win32'",
  #
  # Linux-only dependencies
  "pillow>=12.2.0; sys_platform == 'linux'", # Security fix # Necessary for ImageGrab. # TODO: Bump when 3.15 wheels
  "python-xlib >=0.33; sys_platform == 'linux'",
]
[dependency-groups]
ruff = [
  "beslogic-ruff-config",
  "ruff", # Version should come from beslogic-ruff-config and the lock file
]
dev = [
  #
  # Linters & Formatters
  "dprint-py >=0.50.0.0",
  "mypy >=2.1", # TODO: Bump when 3.15 wheels
  "pyright[nodejs] >=1.1.400", # reportPrivateImportUsage behaviour change
  { include-group = "ruff" },
  #
  # Types
  "types-PyAutoGUI",
  "types-keyboard",
  "types-pyinstaller",
  "types-python-xlib; sys_platform == 'linux'",
  "types-pywin32 >=306.0.0.20240130; sys_platform == 'win32'",
]
[tool.uv]
environments = [
  # AutoSplit does not currently support macOS
  "sys_platform == 'linux'",
  "sys_platform == 'win32'",
]
required-environments = [
  # Ensure we don't miss wheels at resolution for supported platform combinations
  # "sys_platform == 'linux' and platform_machine == 'aarch64'",
  # "sys_platform == 'linux' and platform_machine == 'x86_64'",
  # "sys_platform == 'win32' and platform_machine == 'amd64'",
  # "sys_platform == 'win32' and platform_machine == 'arm64'",
]
dependency-metadata = [
  # PyAutoGUI installs extra libraries we don't want. We only use it for hotkeys
  # PyScreeze -> pyscreenshot -> mss deps calls SetProcessDpiAwareness on Windows
  { name = "PyAutoGUI", requires-dist = [] },
  { name = "types-PyAutoGUI", requires-dist = [] },
]
find-links = ["./scripts"] # Discover local wheels

exclude-newer = "1 week"
[tool.uv.exclude-newer-package]
typed-D3DShot = false # I own it
pyinstaller-hooks-contrib = false # pyinstaller develop build

###
# Development channels
###
[tool.uv.sources]
beslogic-ruff-config = { git = "https://github.com/Beslogic/Beslogic-Ruff-Config", rev = "312cfab8a1e2653639a2ef665e99eac6c7412ba7" }
# pywin32 = { git = "https://github.com/mhammond/pywin32.git", marker = "python_version >= '3.15'" }
# numpy = { index = "scientific-python-nightly-wheels", marker = "python_version >= '3.15'" }
pillow = { index = "scientific-python-nightly-wheels", marker = "python_version >= '3.15'" }
pyinstaller = { git = "https://github.com/pyinstaller/pyinstaller.git" }

[[tool.uv.index]]
exclude-newer = false # Anaconda index doesn't have upload dates
# https://anaconda.org/scientific-python-nightly-wheels/
name = "scientific-python-nightly-wheels"
url = "https://pypi.anaconda.org/scientific-python-nightly-wheels/simple"
explicit = true # Avoid index hijacking
